Corrected email address
And I made it a mailto: link.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h4>Contact</h4>
         <ul>
           <li>Rick Umali
-          <li>rick@websitemaintenance.info
+          <li><a href="mailto:rickumali@websitemaintenance.info">rickumali@websitemaintenance.info</a>
           <li>617-918-7173
         </ul>
       </div>
